flapivor/tests/m1/hopix/parser/good/32-type-definition-sum-2.hopix
type Color = Red | Black | White