flapivor/tests/m1/hopix/parser/bad/32-type-definition-sum-2.hopix
type Color = Red | Black | White | orWhatEver